@@ -1,3 +1,8 @@
+2006-10-29  John W. Eaton  <jwe@octave.org>
+
+	* interpreter/Makefile.in (run-octave): Call it here.
+	* interpreter/sparseimages.m (sparseimages): Don't call sleep here.
+
 2006-10-27  John W. Eaton  <jwe@octave.org>
 
 	* interpreter/Makefile.in (run-octave):
